# LangGraph

./: README.md  main.py  pyproject.toml
LangGraph-chatboat/: 01_chatboat_frontent.py  02_streamlit_frontend_streaming.py  03_streamlit_threading.py  04_streamlit_frontend_database.py  05_streamlit_frontend_threading.py  06_streamlit_frontend_tool.py  Langgraph_tool_backend.py  chatboat_backent.py  chatbot.db  chatbot.db-shm  chatbot.db-wal  langgraph_database_backend.py  langgraph_mcp_backend.py  llm_tools.ipynb
conditional_workflows/: 01_quadratic_workflow.ipynb  02_llm_based_review_handling.ipynb
iterative_workflows/: 01_X_post_generator.ipynb
langsmith-masterclass/: .env.exmple  1_simple_llm_call.py  2_sequential_chain.py  3_rag_v1.py  3_rag_v2.py  3_rag_v3.py  3_rag_v4.py  4_agent.py  5_langgraph.py
paralle_workflow/: 01_battsman_workflow.ipynb  02_assay_analyzer.ipynb
real_chatboat/: 01_chatboat.ipynb  02_persistence.ipynb  03_demo_fault_reactance.ipynb
sequential_workflow/: 01_bmi_workflow.ipynb  02_llm_base_workflow.ipynb  03_prompt_chaining_workflow.ipynb
