[project]
name = "langgraph_course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "langchain-openrouter>=0.2.4",
    "langgraph>=1.2.6",
    "openrouter>=0.10.7",
    "streamlit>=1.58.0",
]
